# openvpn-auth-azure-ad

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  README.md  __init__.py  authenticator.py  docker-compose.yaml  go.mod  go.sum  main.go  openvpn-auth-azure-ad  openvpn-auth-azure-ad.py  openvpn_aad_authenticator  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: ci.yaml  release.yaml
conf/: openvpn-auth-azure-ad.yaml
contrib/: docker-compose.yaml  openvpn-auth-azure-ad.service
docs/: README.md  index.html
docs/scripts/: main.js
internal/config/: config.go
internal/openvpn/: const.go  main.go
lib/: openvpn.py
openvpn/: __init__.py
openvpn_auth_azure_ad/: __init__.py  __main__.py  _version.py  authenticator.py  cli.py  openvpn-auth-azure-ad  types.py
openvpn_auth_azure_ad/openvpn/: __init__.py
openvpn_auth_azure_ad/util/: __init__.py  errors.py  thread_pool.py
tests/: docker-compose.yaml
util/: __init__.py
