[metadata]
name = openvpn-auth-azure-ad
version = attr: openvpn_auth_azure_ad._version.__version__
description = openvpn-auth-azure-ad connects to the openvpn management interface and handle the authentication ageist Azure AD.

author = Jan-Otto Kröpke
author_email = pip@jkroepke.de

long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

license_file = LICENSE.txt

keywords = OpenVPN AzureAD authentication
url = https://github.com/jkroepke/openvpn-auth-azure-ad
project_urls =
    Changelog = https://github.com/jkroepke/openvpn-auth-azure-ad/blob/main/CHANGELOG.md
    Source = https://github.com/jkroepke/openvpn-auth-azure-ad
    Bug Reports = https://github.com/jkroepke/openvpn-auth-azure-ad/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Topic :: System :: Systems Administration :: Authentication/Directory

[options]
packages = find:
install_requires =
    msal ~=1.21
    cacheout ~=0.14
    typer ~=0.7
    prometheus_client ~=0.16
    concurrent-log-handler ~=0.9
    ConfigArgParse ~=1.5

[options.entry_points]
console_scripts =
    openvpn-auth-azure-ad = openvpn_auth_azure_ad:main

[pycodestyle]
max-line-length = 120

[flake8]
max-line-length = 120
